History of this buildout
========================

6.0.0 (unreleased)
------------------

- Added nodejs.cfg and package.json from Zest website.  [maurits]

- Add faceted navigation notes.
- Fix column width (homepage had gap between 2nd and 3rd column)
- Remove faceted nav year (range) widget
- Indent homepage.pt
- Update faceted faceted criteria
  [coen]

- Remove top pagination form facetednavigation
  [coen]

- Disable theme jquery. Use Plone jquery only.
  [coen]

- Diazo rules and styling of plone edit forms.
  [coen, lennard]

- Use mailchimp api3 branch
  [diederik]

- Add upgrade instructions for faceted criteria and javascript/css.
  [coen]

- Add theme mixin
- Add macros to render links
  [coen]

- Add theme mixin and macros to render link items.
  [coen]

- Add default view for theme folders.
  [coen]

- Add upgradesteps to add default page and select view for home and themes.
  [coen]

- Add Plone edit bar rules and styling.
- Basic Diazo to copy content.
  [coen]

- Add theme custom view
- Add the view to a default page.
  [coen]

- Fix arrow path.
  [coen]

- Add homepage view, template, diazo rules.
  [coen]

- Register faceted preview template for file attachments
  [coen]

- Add year select widget
  [coen]

- Add cunstom template for advice preview in faceted navigation.
  [coen, maurits]

- Add custom section radio widget based on the default radio widget from
  faceted navigation. Select all, website or Digibib.
  [coen, maurits]

- Install EEA.facetednavigation, MailChimp and Minaraad.theme products.
  [coen]

- Select default skin
  [coen]

- Do not put content in subfolders.
  [coen]

- Add year widget for faceted navigation
  [coen, maurits]

- Remove resources directory and contents.
  [coen]

- Add vocabularies for faceted navigation
  [coen]

- Unassign right column portlets
  [coen]

- Move redundant top level folders into an unpublished folder.
  [coen]

- Add migrate step to move content to theme folders and subfolders
  [coen]
